--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ margin-top: 200px;
   padding-right: 20px;
   padding: 10px;
   font-size: 16px;
-  border: none;
+  border: solid;
 }
 
 .dropdown {
