--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ margin-top: 200px;
 	align-self: center;
 	border-radius: 500px;
 	border-style: solid;
-	border-color: black;
+	border-color: red;
 	padding: 10px;
 	margin-left: 660px;
 	margin-top: 200px;
@@ -50,7 +50,7 @@ margin-top: 200px;
   padding-right: 20px;
   padding: 10px;
   font-size: 16px;
-  border: solid;
+  border: none;
 }
 
 .dropdown {
