--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ margin-top: 200px;
 	align-self: center;
 	border-radius: 500px;
 	border-style: solid;
-	border-color: red;
+	border-color: black;
 	padding: 10px;
 	margin-left: 660px;
 	margin-top: 200px;
