--- a/style.css
+++ b/style.css
@@ -99,3 +99,25 @@ margin-bottom: 5px;
 	text-align: center;
 	font-size: 20px;
 }
+
+#Major {
+	color: white;
+	background-color: green;
+	text-align: center;
+	float: bottom;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	margin-left: 200px;
+	margin-right: 200px; 
+	font-size: 20px;
+}
+
+#back {
+	color: white;
+	background-color: green;
+	border-radius: 400px;
+	border: solid;
+	border-color: black;
+	padding: 10px; 
+	margin-bottom: 20px;
+}
